# classification_rule_mining

./: .gitignore  LICENSE  README.md  main.py  outputs.md  pyproject.toml  test.py  test_rag.md
hands-on/: test.py
src/: agents.py  config.py  main.py  prompts.py
src/examples/: agents.py  config.py  main.py  prompts.py
src/examples/tools/: registry.py  tool_loader.py
src/examples/workflows/: date.py  date_weather.py  docagent.py
src/tools/: registry.py  tool_loader.py  tools.py
src/utils/: agent_utils.py  data_utils.py  embeddings.py  io.py  llm_utils.py  tracing.py
src/workflows/: date.py  extract_rules.py
