[project]
name = "classification-rule-mining"
version = "0.1.0"
description = "Business rule mining from raw feedbacks with MAS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag2[openai]>=0.12.1",
    "langfuse>=4.5.1",
]

[tool.uv]
package = true

[project.scripts]
demo = "examples.main:main"
