[project]
name = "classification-rule-mining"
version = "0.1.0"
description = "Business rule mining from raw feedbacks with MAS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag2[openai,rag]<=0.12.1",
    "duckdb>=1.5.2",
    "langfuse>=4.5.1",
    "pandas>=2.3.3",
    "qdrant-client>=1.17.1",
    "s3fs>=2026.4.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
]

[tool.uv]
package = true

[project.scripts]
demo = "examples.main:main"
